--- a/src/sbbs3/echocfg.vcxproj
+++ b/src/sbbs3/echocfg.vcxproj
@@ -41,6 +41,7 @@
     <Import Project="..\encode\encode.props" />
     <Import Project="..\conio\conio_gdi.props" />
     <Import Project="..\build\target_winver.props" />
+    <Import Project="..\build\target_ia32.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -53,6 +54,7 @@
     <Import Project="..\encode\encode.props" />
     <Import Project="..\conio\conio_gdi.props" />
     <Import Project="..\build\target_winver.props" />
+    <Import Project="..\build\target_ia32.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
