--- a/src/sbbs3/services.vcxproj
+++ b/src/sbbs3/services.vcxproj
@@ -42,6 +42,7 @@
     <Import Project="..\..\3rdp\win32.release\cryptlib\cryptlib.props" />
     <Import Project="..\hash\hash.props" />
     <Import Project="..\build\target_winver.props" />
+    <Import Project="..\build\target_ia32.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -55,6 +56,7 @@
     <Import Project="..\..\3rdp\win32.release\cryptlib\cryptlib.props" />
     <Import Project="..\hash\hash.props" />
     <Import Project="..\build\target_winver.props" />
+    <Import Project="..\build\target_ia32.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
