DDMsgReader: Input timeout warning improvement - Now displays warning text. Also, new areYouThere configurable string in the theme file.

--- a/xtrn/DDMsgReader/DefaultTheme.cfg
+++ b/xtrn/DDMsgReader/DefaultTheme.cfg
@@ -289,3 +289,9 @@ selectedMsgMarkColor=wh
 
 ; Unread persomal email/messages message mark color
 unreadMsgMarkColor=whi
+
+
+; -------- Other/general text strings --------
+
+; "Are you really there?" input timeout warning message
+areYouThere=\x01n\x01r\x01h\x01i@NAME@! \x01n\x01hAre you really there?\x01n
