SlyEdit: Display a user inactivity warning message (configurable)

--- a/ctrl/SlyEdit.cfg
+++ b/ctrl/SlyEdit.cfg
@@ -59,6 +59,11 @@ allowSpellCheck=true
 ; the same directory as SlyEdit.
 dictionaryFilenames=en
 
+; String settings - Currently, the only setting is the strings configuration
+; filename
+[STRINGS]
+stringsFilename=SlyEditStrings_En.cfg
+
 ; To use a different color theme file, change the ThemeFilename
 ; setting.  If you want, you can comment out the current setting
 ; (by placing a ; in front of the line) and un-commenting one
