Initial changes to support MODE7 graphics natively Similar to PETSCII it will answer on a dedicated port.

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -77,7 +77,9 @@
 	Pet40Port = 64
 	; TCP port for 80-column PETSCII connections (any terminal protocol):
 	Pet80Port = 128
-	; Note on PETSCII support: you must add the same port(s) to one of your
+	; TCP port for 40-column MODE7 connections (any termnial protocol):
+	Mode7Port = 5050
+	; Note on PETSCII and MODE7 support: you must add the same port(s) to one of your
 	; *Interface= values above to open/listen/accept connections on that port.
 	; Example:
 	;   TelnetInterface = 71.95.196.34,71.95.196.34:64,71.95.196.34:128
