And thou art v1.7b

--- a/src/syncterm/dpkg-control.in
+++ b/src/syncterm/dpkg-control.in
@@ -1,5 +1,5 @@
 Package: syncterm
-Version: 1.6
+Version: 1.7b
 Maintainer: Deuce <shurd@sasktel.net>
 Architecture: %%ARCH%%
 Description: ANSI Terminal for BBSs
