More Mode 7 modifications

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -77,7 +77,7 @@
 	Pet40Port = 64
 	; TCP port for 80-column PETSCII connections (any terminal protocol):
 	Pet80Port = 128
-	; TCP port for 40-column MODE7 connections (any termnial protocol):
+	; TCP port for 40-column MODE7 connections (any terminal protocol):
 	Mode7Port = 5050
 	; Note on PETSCII and MODE7 support: you must add the same port(s) to one of your
 	; *Interface= values above to open/listen/accept connections on that port.
